@@ -26,6 +26,7 @@ import com.intellij.ui.components.JBPanel;
 import com.intellij.util.ui.JBUI;
 import com.intellij.util.ui.StartupUiUtil;
 import com.intellij.util.ui.UIUtil;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -40,6 +41,7 @@ import java.util.Objects;
  * @author Anton Katilin
  * @author Vladimir Kondratyev
  */
+@ApiStatus.Internal
 public class IdeRootPane extends JRootPane implements UISettingsListener {
   /**
    * Toolbar and status bar.
@@ -95,7 +97,7 @@ public class IdeRootPane extends JRootPane implements UISettingsListener {
 
       if (FrameInfoHelper.isFloatingMenuBarSupported()) {
         menuBar = menu;
-        getLayeredPane().add(menuBar, new Integer(JLayeredPane.DEFAULT_LAYER - 1));
+        getLayeredPane().add(menuBar, Integer.valueOf(JLayeredPane.DEFAULT_LAYER - 1));
       }
 
       addPropertyChangeListener(IdeFrameDecorator.FULL_SCREEN, __ -> updateScreenState(frameHelper));
@@ -129,10 +131,6 @@ public class IdeRootPane extends JRootPane implements UISettingsListener {
 
   public @NotNull ToolWindowsPane getToolWindowPane() {
     return myToolWindowsPane;
-  }
-
-  public void init(@NotNull ProjectFrameHelper frame, @NotNull Disposable parentDisposable) {
-    createAndConfigureStatusBar(frame, parentDisposable);
   }
 
   private void updateScreenState(@NotNull IdeFrame helper) {
@@ -236,19 +234,19 @@ public class IdeRootPane extends JRootPane implements UISettingsListener {
 
   private static @NotNull JComponent createToolbar() {
     ActionGroup group = (ActionGroup)CustomActionsSchema.getInstance().getCorrectedAction(IdeActions.GROUP_MAIN_TOOLBAR);
-    ActionManagerEx actionManager = ActionManagerEx.getInstanceEx();
-    ActionToolbar toolBar = actionManager.createActionToolbar(ActionPlaces.MAIN_TOOLBAR, Objects.requireNonNull(group), true);
+    ActionToolbar toolBar = ActionManagerEx.getInstanceEx()
+      .createActionToolbar(ActionPlaces.MAIN_TOOLBAR, Objects.requireNonNull(group), true);
     toolBar.setLayoutPolicy(ActionToolbar.WRAP_LAYOUT_POLICY);
 
     DefaultActionGroup menuGroup = new DefaultActionGroup();
     menuGroup.add(new ViewToolbarAction());
     menuGroup.add(new CustomizeUIAction());
-    PopupHandler.installUnknownPopupHandler(toolBar.getComponent(), menuGroup, actionManager);
+    PopupHandler.installUnknownPopupHandler(toolBar.getComponent(), menuGroup);
 
     return toolBar.getComponent();
   }
 
-  private void createAndConfigureStatusBar(@NotNull IdeFrame frame, @NotNull Disposable parentDisposable) {
+  public void createAndConfigureStatusBar(@NotNull IdeFrame frame, @NotNull Disposable parentDisposable) {
     myStatusBar = createStatusBar(frame);
     Disposer.register(parentDisposable, myStatusBar);
 
